# python-template

./: .dict-custom.txt  .gitignore  .pdm-python  .pyspelling.yml  .yamllint.yaml  CODEOWNERS  GH_CONFIG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: gh-actions.yml  git-pr.yml  git.yml  json.yml  links.yml  markdown.yml  misspell.yml  proselint.yml  spellcheck.yml  woke.yml  yaml.yml
src/salve_mundi/: __init__.py  __main__.py  main.py
