[project]
name = "salve-mundi"
version = "0.1.0"
description = "Example Python Hello World Project"
authors = [
    {name = "Victor Payno", email = "vpayno@users.noreply.github.com"},
]
dependencies = [
    "rich>=13.7.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "library"

# https://pdm-project.org/latest/usage/scripts/
[tool.pdm.scripts]
main = { call = "salve_mundi:main" }
module = { shell = "python -m salve_mundi" }

[project.script]
salve_mundi = "salve_mundi.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
